--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding-bottom: 15px;
 }
 
 .container__figure {
@@ -24,9 +26,34 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 5px 10px;
+  padding: 15px 10px;
 }
 
 .container__detail__price {
   font-weight: 700;
+}
+
+.cantidadItems {
+  border-radius: 50ch;
+  background-color: rgb(182, 0, 0);
+  color: #fff;
+  font-weight: 700;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.container__detail__addCart {
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #000;
+  padding: 8px 8px;
+  border-radius: 50ch;
+  font-family: "Montserrat";
+  cursor: pointer;
 }
