--- a/src/components/sections/Header/Header.module.css
+++ b/src/components/sections/Header/Header.module.css
@@ -1,24 +1,37 @@
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
 }
 
 .container__profile {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .container__profile img {
-    width: 32px;
+  width: 32px;
 }
 
 .container__categories__list {
-    display: flex;
-    list-style: none;
-    font-weight: 600;
-    gap: 15px;
+  display: flex;
+  list-style: none;
+  font-weight: 600;
+  gap: 15px;
 }
 
-
+.cantidadItems {
+  border-radius: 50ch;
+  background-color: rgb(182, 0, 0);
+  color: #fff;
+  font-weight: 700;
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: center;
+  position: absolute;
+  right: 75px;
+  top: 20px;
+}
